--- a/public/stylesheets/flat-admin.css
+++ b/public/stylesheets/flat-admin.css
@@ -16270,12 +16270,22 @@ footer.app-footer {
   width: 10px;
 }
 
+::-webkit-scrollbar {
+  width: 10px;
+}
 .scroll4::-webkit-scrollbar-thumb {
   background: #666;
   border-radius: 20px;
 }
-
+::-webkit-scrollbar-thumb {
+  background: #666;
+  border-radius: 20px;
+}
 .scroll4::-webkit-scrollbar-track {
+  background: #ddd;
+  border-radius: 20px;
+}
+::-webkit-scrollbar-track {
   background: #ddd;
   border-radius: 20px;
 }
