--- a/app/views/vibhor_helper.scala.html
+++ b/app/views/vibhor_helper.scala.html
@@ -153,7 +153,7 @@
         </li>
       </ul>
 	  
-	  <div class="row scroll4" style="float:none">
+	  <div id="current_path" class="row scroll4" style="float:none">
 		<div class="col-lg-12">
     
 		<div class="section"  style="height: 161px;">
