--- a/public/stylesheets/flat-admin.css
+++ b/public/stylesheets/flat-admin.css
@@ -16226,41 +16226,37 @@ footer.app-footer {
   90% { transform: translate(1px, 2px) rotate(0deg); }
   100% { transform: translate(1px, -2px) rotate(-1deg); }
 }
-
-.console_notice:nth-child(odd){
+.console{
+    width: inherit;
+    height: 30em;
+    border: 1px solid #141313;
+    background: #080808;
+    color: white;
+    font-size: 0.6em;
+    border-radius: 4px;
+    word-break: break-word;
+}
+.console > .console_rows{
+    min-height: 3.7em;
+    margin: 0;
+    padding-left: 4px;
+    padding-right: 1em;
+    padding-top: 3px;
+}
+.notice:nth-child(odd){
   background: #24537b;
-  margin: 0;
-  min-height: 3.7em;
-  padding-top: 3px;
-  padding-left: 4px;
   border: 1px solid #0d416e;
 }
-.console_notice:nth-child(even){
+.notice:nth-child(even){
   background: #3a7ab0;
   border: 1px solid #1a6eb5;
-  min-height: 3.7em;
-  margin: 0;
-  padding-left: 4px;
-  padding-top: 3px;
 }
-.console_error{
+
+.error{
   background: #840808;
   border: 1px solid #8b1d1d;
-  min-height: 3.7em;
-  margin: 0;
-  padding-left: 4px;
-  padding-top: 3px;
 }
-.console{
-  width: inherit;
-  height: 30em;
-  border: 1px solid #141313;
-  background: #080808;
-  color: white;
-  font-size: 0.6em;
-  border-radius: 4px;
-  word-break: break-word;
-}
+
 .scroll4 {
   overflow: auto;
   float: left;
