--- a/app/views/vibhor_helper.scala.html
+++ b/app/views/vibhor_helper.scala.html
@@ -19,11 +19,11 @@
   
 </head>
 <body>
-<div class="row" style="height: 8px">
+<div class="row" style="height: 4px">
  <div class="col-lg-12">
-      <div class="card card-tab" style="margin-top:0">
-		<div class="progress" style="height: 8px">
-				<div id="progress_bar" class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 100%">
+      <div class="card card-tab" style="height: inherit;margin-top:0">
+		<div class="progress">
+				<div id="progress_bar" class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 0">
 				 
 				</div>
 			</div>
