--- a/app/views/vibhor_helper.scala.html
+++ b/app/views/vibhor_helper.scala.html
@@ -174,7 +174,7 @@
 
 		 @if(counter<=4){
 		 <li role="step">
-            <a href="#step1" id="step1-tab" role="tab" data-toggle="tab" aria-controls="home" aria-expanded="true" style="padding-bottom: 0px;padding-top: 0px;">
+            <a href="#step1" id="step1-tab" role="tab"  aria-controls="home" aria-expanded="true" style="padding-bottom: 0px;padding-top: 0px;">
                 <div class="icon">@cur_count</div>
                 <div class="heading">
                     <div class="title">@curr_string</div>
@@ -209,7 +209,7 @@
 			 </ul>
 			 <ul class="nav nav-tabs " role="tablist" style="margin-bottom: 0px;margin-top: 10px;">
 			  <li role="step">
-				<a href="#step1" id="step1-tab" role="tab" data-toggle="tab" aria-controls="home" aria-expanded="true" style="padding-bottom: 0px;padding-top: 0px;">
+				<a href="#step1" id="step1-tab" role="tab"  aria-controls="home" aria-expanded="true" style="padding-bottom: 0px;padding-top: 0px;">
 					<div class="icon">@cur_count</div>
 					<div class="heading">
 						<div class="title">@curr_string</div>
@@ -457,31 +457,32 @@
 										<div class="panel panel-default">
 
 
-										<div class="panel-heading" data-toggle="collapse" href="#collapse_pkg_@level_count">
+										<div class="panel-heading" onclick="handleCollapse(id)" id="#collapse_pkg_@level_count">
 													<h4 class="panel-title">
 													  <pre class="tab"><sup>(@ALL_TYPE_COUNTS(main_index).get("pls"))</sup><span> Packages</span></pre>
 													</h4>
 										  </div>
 										  <div id="collapse_pkg_@level_count" class="panel-collapse collapsed" >
-
+											  @(func_count=1)
 											 @for(key <- ALL_REFINED_HM(main_index).keySet()){
 
 
 									 	     @if(ALL_REFINED_HM(main_index).get(key)!=null){
+
 											<div class="panel-body">
 												<div class="col-md-12 col-sm-2 col-inside">
 													<div class="panel panel-default">
-														<div class="panel-heading" data-toggle="collapse" href="#collapse_@func_count" >
+														<div class="panel-heading" onclick="handleCollapse(id)" id="#collapse_@level_count+@func_count" >
 															<h4 class="panel-title-nest">
 															<pre class="tab"><sup>(@ALL_REFINED_HM(main_index).get(key).size)</sup><span> @key</span></pre>
 															</h4>
 														</div>
 
 														@if(ALL_REFINED_HM(main_index).get(key).size>0){
-															<div id="collapse_@func_count" class="panel-collapse collapsed">
+															<div id="collapse_@level_count+@func_count" class="panel-collapse collapsed">
 
 														}else{
-															<div id="collapse_@func_count" class="panel-collapse collapse">
+															<div id="collapse_@level_count+@func_count" class="panel-collapse collapse">
 
 														}
 															  @for(func_title <- ALL_REFINED_HM(main_index).get(key)){
@@ -529,7 +530,7 @@
 
 										<!-- FORMS -->
 										<div class="panel panel-default">
-										  <div class="panel-heading" data-toggle="collapse" href="#collapse_forms_@level_count">
+										  <div class="panel-heading" onclick="handleCollapse(id)" id="#collapse_forms_@level_count">
 											<h4 class="panel-title">
 											 <pre class="tab"><sup>(@ALL_TYPE_COUNTS(main_index).get("fmb"))</sup><span> Forms</span></pre>
 											</h4>
@@ -578,7 +579,7 @@
 
 										 <!-- BATCHES -->
 										<div class="panel panel-default">
-										  <div class="panel-heading" data-toggle="collapse" href="#collapse_batches_@level_count">
+										  <div class="panel-heading" onclick="handleCollapse(id)" id="#collapse_batches_@level_count">
 											<h4 class="panel-title">
 											  <pre class="tab"><sup>(@ALL_TYPE_COUNTS(main_index).get("pc"))</sup><span> Batches</span> </pre>
 											</h4>
@@ -622,7 +623,7 @@
 
 											<!-- TRIGGERS -->
 											<div class="panel panel-default">
-										  <div class="panel-heading" data-toggle="collapse" href="#collapse_trg_@level_count">
+										  <div class="panel-heading" onclick="handleCollapse(id)" id="#collapse_trg_@level_count">
 											<h4 class="panel-title">
 											  <pre class="tab"><sup>(@ALL_TYPE_COUNTS(main_index).get("trg"))</sup><span> Triggers</span></pre>
 											</h4>
