--- a/app/views/vibhor_helper.scala.html
+++ b/app/views/vibhor_helper.scala.html
@@ -357,7 +357,7 @@
        </div>
   	
 
-		<div class="card-body no-padding tab-content" style="overflow-y: auto;height: 60%;">
+		<div id="main_area" class="card-body no-padding tab-content" style="overflow-y: auto;height: 60%;">
           <div role="tabpanel" class="tab-pane active" id="tab1" style="height: 100%">
        
             		<div class="card-body no-padding">
