Migrate to separate js file, left repo list stabilized #20

--- a/app/views/vibhor_helper.scala.html
+++ b/app/views/vibhor_helper.scala.html
@@ -414,33 +414,7 @@
 											</div>
 											</div>
 
-									 @if(level_count>0){
 
-
-
-											<!-- 	<div class="col-lg-12" style="visibility:collapse;margin-bottom: 0px">
-
-
-													  <div class="modal fade in" id="warning" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" style="display: block; padding-right: 17px;">
-													  <div class="modal-dialog">
-														<div class="modal-content">
-														  <div class="modal-header">
-
-															<h4 class="modal-title">Warning</h4>
-														  </div>
-														  <div class="modal-body" style="word-wrap:break-word;">
-															<h4>No further mention of this string</h4>
-														  </div>
-														  <div class="modal-footer">
-															<button type="button" class="btn btn-sm btn-default" onclick="remove_modal()">Close</button>
-
-														  </div>
-														</div>
-													  </div>
-													</div>
-													</div> -->
-
-										 }
 										}else{
 									<div class="area_result_elements">
 									<div class="row no-gap">
@@ -466,7 +440,7 @@
 											  @(func_count=1)
 											 @for(key <- ALL_REFINED_HM(main_index).keySet()){
 
-
+											<!-- problem area vibhor -->
 									 	     @if(ALL_REFINED_HM(main_index).get(key)!=null){
 
 											<div class="panel-body">
